--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                activity-graphing
+name:                graphing
 version:             0.1.0.0
-github:              "tbidne/activity-graphing"
+github:              "tbidne/graphing"
 license:             BSD3
 author:              "Thomas Bidne"
 maintainer:          "tbidne@gmail.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/activity-graphing#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/graphing#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -30,7 +30,7 @@ library:
   - time
 
 executables:
-  activity-graphing-exe:
+  graphing-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -38,10 +38,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - activity-graphing
+    - graphing
 
 tests:
-  activity-graphing-test:
+  graphing-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -49,4 +49,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - activity-graphing
+    - graphing
