--- a/stack.yaml
+++ b/stack.yaml
@@ -37,7 +37,12 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps: [
+  cairo-0.13.6.0,
+  Chart-1.9.1,
+  Chart-cairo-1.9.1,
+  gtk2hs-buildtools-0.13.5.0
+]
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
